--- a/src/appsscript.json
+++ b/src/appsscript.json
@@ -8,8 +8,8 @@
     "https://www.googleapis.com/auth/script.external_request"
   ],
   "dataStudio": {
-    "name": "Loopsider - Datastudio Connector",
-    "logoUrl": "https://loopsider.com/assets/logo.svg",
+    "name": "Loopsider - Connectator 2000",
+    "logoUrl": "https://public.loopsider.com/facebook/Loopsider-424922021243063/page/picture.png",
     "company": "Loopsider",
     "companyUrl": "https://loopsider.com",
     "addonUrl": "https://loopsider.com",
